# light_source_code

./: .hgignore  CMakeLists.txt  config  config-barney  config-teapot  stunden  unterschiede
cmake/: FindLPSolve.cmake
shader/: fragment.s  vertex.s
src/: CMakeLists.txt  Material.cpp  Material.h  MeshObj.cpp  MeshObj.h  ObjLoader.cpp  Shader.cpp  Shader.h  Trackball.cpp  Trackball.h  args.h  gsl.h  kmeansw.cpp  kmeansw.h  lights.cpp  lights.h  main.cpp  opengl.cpp  opengl.h  solver.h  tests.cpp  tests.h  utils.cpp  utils.h
src/libtpc/: CMakeLists.txt  README  lss_lib.c  memory_handler.c  nnls.c
src/libtpc/include/: lss_lib.h  memory_handler.h  nnls.h
testscenes/: beschreibung  unitsphere.blend
